# twilio_manager_mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  twilio_manager_mcp.py  twilio_manager_mcp_sse.py
.cursor/: mcp.json.example
api/: async_twilio_api.py
clients/: base_sse_client.py  client.py  mcp_client_sse.py
